Fixed main nav align center

--- a/style/style.css
+++ b/style/style.css
@@ -60,18 +60,26 @@
     background: #007C3E;
 }
 
+.nav {
+    height: 100%;
+}
+
 .nav a {
     color: white;
     text-decoration: none;
+    text-align: center;
 }
 
 .nav-list {
+    display: flex;
+    justify-content: space-evenly;
     width: 100%;
+    height: 100%;
 }
 
-.nav-list-item {
+.nav-list-item-container {
     display: flex;
     align-items: center;
-    padding: 10px;
+    padding: 20px;
     height: 100%;
 }
